
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct mwifiex_uap_bss_param {int bcast_ssid_ctl; int radio_ctl; int dtim_period; int beacon_period; int auth_mode; int rts_threshold; int frag_threshold; int retry_limit; int qos_info; } ;



void mwifiex_set_sys_config_invalid_data(struct mwifiex_uap_bss_param *config)
{
 config->bcast_ssid_ctl = 0x7F;
 config->radio_ctl = 0x7F;
 config->dtim_period = 0x7F;
 config->beacon_period = 0x7FFF;
 config->auth_mode = 0x7F;
 config->rts_threshold = 0x7FFF;
 config->frag_threshold = 0x7FFF;
 config->retry_limit = 0x7F;
 config->qos_info = 0xFF;
}
